--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       - DATABASE_URL=sqlite:///./stock_watchlist.db
       - TZ=America/Chicago
+      - FINNHUB_API_KEY
     volumes:
       - ./backend:/app
       - backend_data:/app/data
