--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,11 +3,13 @@ uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
 alembic==1.12.1
 apscheduler==3.10.4
+requests==2.31.0
+python-dotenv==1.0.0
+pydantic==2.5.0
 aiohttp==3.9.1
 pandas==2.1.4
 openpyxl==3.1.2
 python-multipart==0.0.6
-pydantic==2.5.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
 httpx==0.25.2
