--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite:///./data/stock_watchlist.db
+sqlalchemy.url = postgresql://stockuser:stockpassword@host.docker.internal:5432/stockwatchlist
 
 
 [post_write_hooks]
