--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
 alembic==1.12.1
 apscheduler==3.10.4
 requests==2.31.0
