--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,9 +8,11 @@ requests==2.31.0
 python-dotenv==1.0.0
 pydantic==2.5.0
 aiohttp==3.9.1
-pandas==2.1.4
+pandas==2.3.2
 openpyxl==3.1.2
 python-multipart==0.0.6
 pytest==7.4.3
 pytest-asyncio==0.21.1
 httpx==0.25.2
+# Install pandas-ta from GitHub tag to avoid mirrors that block pre-releases
+pandas-ta==0.4.71b0
