--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - SCHWAB_CLIENT_ID=${SCHWAB_CLIENT_ID}
       - SCHWAB_CLIENT_SECRET=${SCHWAB_CLIENT_SECRET}
       - SCHWAB_REFRESH_TOKEN=${SCHWAB_REFRESH_TOKEN}
+      - SCHWAB_REDIRECT_URI=${SCHWAB_REDIRECT_URI}
       - SCHWAB_BASE_URL=${SCHWAB_BASE_URL:-https://api.schwabapi.com}
     volumes:
       - ./external-apis:/app
@@ -59,6 +60,8 @@ services:
       - EOD_WORKERS=20
       - EOD_MAX_RPS=15
       - EOD_REQ_SLEEP_MS=0
+      # Technical Analysis Settings
+      - TECH_MIN_ROWS=10
     volumes:
       - ./jobs-service:/app
     networks:
