--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,14 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 
-COPY . .
+COPY src/ ./src/
+COPY index.html ./
+COPY vite.config.ts ./
+COPY tsconfig.json ./
+COPY tsconfig.node.json ./
+COPY tailwind.config.js ./
+COPY postcss.config.js ./
+COPY vitest.config.ts ./
 
 EXPOSE 3000
 
