setup config file for jobs and related tables and setup ttl to cleanup all related tables

--- a/jobs-service/Dockerfile
+++ b/jobs-service/Dockerfile
@@ -15,6 +15,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
+# Make startup script executable
+RUN chmod +x start-with-validation.sh
+
 # Create non-root user
 RUN useradd -m -u 1001 appuser && chown -R appuser:appuser /app
 USER appuser
@@ -30,5 +33,5 @@ EXPOSE 8004
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD python -c "import requests; requests.get('http://localhost:8004/health')" || exit 1
 
-# Run the application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8004"]
+# Run the application with validation
+CMD ["./start-with-validation.sh"]
