weekly signals job

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,6 +109,7 @@ services:
       - TECH_MIN_ROWS=10
     volumes:
       - ./jobs-service:/app
+      - ./sql:/sql
     networks:
       - app-network
     depends_on:
@@ -118,6 +119,26 @@ services:
         condition: service_started
     extra_hosts:
       - "host.docker.internal:host-gateway"
+
+  screener-api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    ports:
+      - "8001:8000"
+    environment:
+      - DB_DSN=postgresql+psycopg://${DATABASE_USER}:${DATABASE_PASSWORD}@postgres:5432/${DATABASE_NAME}
+      - SCREENER_DEFAULT_SORT=combined_score DESC
+      - SCREENER_PAGE_SIZE_DEFAULT=50
+      - SCREENER_MAX_PAGE_SIZE=200
+    volumes:
+      - ./api:/app
+    networks:
+      - app-network
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
 
   frontend:
     build: ./frontend
@@ -136,6 +157,7 @@ services:
       - backend
       - external-apis
       - jobs-service
+      - screener-api
 
 networks:
   app-network:
